# PhDOrganiser

./: CMakeLists.txt  PhDOrganiser.sln  README.md
PhDOrganiser/: Calendar.txt  Conference.cpp  Conference.h  DateAndTime.cpp  DateAndTime.h  ErrorLog.cpp  ErrorLog.h  Event.h  Functions.cpp  Functions.h  Lecture.cpp  Lecture.h  Log.cpp  Log.h  MainFunctions.cpp  MainFunctions.h  Meeting.cpp  Meeting.h  Organise.h  PhDOrganiser.vcxproj.filters  Presentation.cpp  Presentation.h  RunOrganiser.cpp  Search.h  Seminar.cpp  Seminar.h  Sort.cpp  Sort.h  TextFile.cpp  TextFile.h  WeeklyLog.cpp  WeeklyLog.h  help_error.txt  test3.txt
config/: setup.sh.in
include/: DateAndTime.h  Event.h  MainFunctions.h  Meeting.h  Presentation.h  Sort.h  TextFile.h  WeeklyLog.h
source/: DateAndTime.cpp  ErrorLog.cpp  Event.cpp  Functions.cpp  Lecture.cpp  Log.cpp  MainFunctions.cpp  Meeting.cpp  Organise.cpp  PhDOrganiser.vcxproj  Presentation.cpp  Search.cpp  Seminar.cpp  WeeklyLog.cpp  uboone_wk10.txt
